--- a/ChatterProject/Web.config
+++ b/ChatterProject/Web.config
@@ -10,9 +10,8 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ChatterProject-20180326111527.mdf;Initial Catalog=aspnet-ChatterProject-20180326111527;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <add name="DefaultConnection" connectionString="Data Source=WECANCODEIT-27\SQLEXPRESS;initial catalog=Chatter;integrated security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
-   <add name="ChatterEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WECANCODEIT-27\SQLEXPRESS;initial catalog=Chatter;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=WECANCODEIT-27\SQLEXPRESS;initial catalog=Chatter;integrated security=True;MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" /><add name="ChatterEntities" connectionString="metadata=res://*/Models.ChatterModel.csdl|res://*/Models.ChatterModel.ssdl|res://*/Models.ChatterModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WECANCODEIT-27\SQLEXPRESS;initial catalog=Chatter;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="ChatterEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WECANCODEIT-27\SQLEXPRESS;initial catalog=Chatter;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
